BTG version 0.9.8
-----------------
The following bugs were fixed:

013708 Seeder/Leecher counts incorrect
013852 Use torrent-ip to create lt sessions.
013833 Convert projectDefaults to a non-singleton.
013814 Configure script does not detect lt upnp in lt 0.14.
013774 Add amd64 architecture to the packages.
013701 Keys for "Quit" and "Back" should be separate.
013700 Reload filter list w/o restarting daemon.
013644 Ports opened by UPnP when it is disabled.
013643 Daemon starts without rewriting unexistent pid.
013618 btgncli, show sessions when invoked without arguments.
013557 CyberLink UPnP, automatic internal IP detection.
013555 UPnP, added separate config-file parameter for internal-ip.
013538 Issues with native FreeBSD dialog.
013501 Implement better torrent loading.
013490 Provide source-packages in deb-src.
013460 Showing file pieces for torrents missing from wwwui.
013459 File selection missing from wwwui.
013454 Writing PID-file (daemon).
013435 Open all necessary files before switching EUID (daemon).
013450 Logging optimization - static conditions.
013436 btgui, resizable headers.
013434 Log messsages loss when logging not initialized.
013433 Configuration file search paths.
013412 Additional command: supported options.
013411 BTGWWW, load a torrent from an URL.
013399 Merge Miklos Vajna's GCC 4.3 patch.
013381 URL loading in daemon and non-www clients.
013307 btgui, no error message on incorrect login (also btgcli/ncli).
013198 Unable to load huge torrent files.

BTG version 0.9.7
-----------------
The following bugs were fixed:

013359 Compilation error: numinput.h.
013315 btgui, torrent remains after moving to another session.
013306 btgui, executing operations on multiple torrents.
013272 Add support for libtorrent 0.12.1.
013267 btgcli, incorrect seed limit.
013266 btgui, global limit setting.
013265 btgui, limit settings dialog doesn't correctly display limits.
013248 btgncli, add dialog used for entering numbers.