@@ -3,8 +3,8 @@ SUBDIRS = ncurses
 if BUILDCLI
 bin_PROGRAMS = btgcli
 
-btgcli_SOURCES = clicmd.cpp cli_create.cpp cli.cpp nscreen.cpp nscreen_log.cpp btgcli.cpp
-noinst_HEADERS = runstate.h clicmd.h cli.h nscreen.h nscreen_log.h
+btgcli_SOURCES = clicmd.cpp cli_create.cpp cli.cpp screen.cpp screen_log.cpp btgcli.cpp
+noinst_HEADERS = runstate.h clicmd.h cli.h screen.h screen_log.h
 btgcli_LDADD   = $(top_builddir)/UI/cli/ncurses/libcommoncli.la \
                  $(top_builddir)/bcore/libbtgcore.la \
                  $(top_builddir)/bcore/client/libbtgclient.la \
