@@ -1875,8 +1875,8 @@ namespace btg
 
          void cliHandler::onSessionInfo(bool const _encryption, bool const _dht)
          {
-            dht_enabled_        = _encryption;
-            encryption_enabled_ = _dht;
+            dht_enabled_        = _dht;
+            encryption_enabled_ = _encryption;
          }
 
          void cliHandler::onTrackerInfo(t_strList const& _trackerlist)
